syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

package heat_pump;

service HeatPumpSvc {
  rpc GetActiveCircuitCount(google.protobuf.Empty) returns (google.protobuf.UInt32Value) {}
  rpc GetTemperatures(google.protobuf.Empty) returns (Temperatures) {}
  rpc GetTankLimits(google.protobuf.Empty) returns (TankLimits) {}
  rpc IsCompressorActive(google.protobuf.Empty) returns (google.protobuf.BoolValue) {}
  rpc IsSchedulingEnabled(google.protobuf.Empty) returns (google.protobuf.BoolValue) {}
}

message Temperatures {
  float circuit1 = 1;
  float circuit2 = 2;
  float circuit3 = 3;
  float ground_input = 4;
  float ground_output = 5;
  float hot_gas = 6;
  float inside = 7;
  float lower_tank = 8;
  float outside = 9;
  float upper_tank = 10;
}

message TankLimits {
  uint32 lower_tank_minimum = 1;
  uint32 lower_tank_maximum = 2;
  uint32 upper_tank_minimum = 3;
  uint32 upper_tank_maximum = 4;
}
